Fix header overlap in About section

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,3 +1,7 @@
+.about {
+  padding-top: 120px;
+}
+
 .about-content {
     display: grid;
     grid-template-columns: 1fr 2fr;
